Fix autocomplete list z-index.

--- a/less/graph.less
+++ b/less/graph.less
@@ -504,6 +504,10 @@ html.nomenu #menus, html.nomenu #sliders {
     }
 }
 
+.ace_editor.ace_autocomplete.ace-chrome {
+    z-index: @modal-z + 1;
+}
+
 .settingsPanel {
     z-index: @modal-z;
 }
